# AppLauncher

./: CMakeLists.txt  README.md  blahblah  main.cpp
AppLauncher/: AppLauncher.cpp  AppLauncher.h  CMakeLists.txt  tests.cpp
